# bibliogenius

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  Makefile  README.md  SECURITY.md  TESTING.md  build.rs  cargokit.yaml  check_output.txt  demo-french-settings.html  deny.toml
.cargo/: audit.toml  config.toml
.github/workflows/: release.yml  rust-ci.yml
docs/: future_tasks_prompts.md
examples/: library_seed_demo.rs
migrations/: 001_initial.sql  002_add_auth_and_relations.sql  003_p2p_sync.sql  004_book_copy_refactor.sql  005_add_copy_status.sql  006_create_contacts.sql  007_create_loans.sql  008_installation_profiles.sql  009_professional_cataloguing.sql  010_add_source_data.sql  011_add_theme.sql  012_add_geolocation.sql  013_add_peer_location.sql  014_add_p2p_requests.sql  015_add_shelf_position.sql  016_add_outgoing_requests.sql  017_add_show_borrowed_books.sql  018_add_finished_reading_at.sql  019_add_started_reading_at.sql  020_add_contact_address_fields.sql  021_add_operation_log_status.sql  022_add_tag_parent_id.sql  023_add_price_to_books.sql  024_add_price_to_copies.sql  025_create_sales_table.sql  026_add_sold_at_to_copies.sql  027_create_collections.sql  028_add_peer_library_uuid.sql  030_add_avatar_config_to_peers.sql
scripts/: populate_sample_data.sh  qa_covers_etag.sh  qa_delta_relay.sh  qa_delta_sync.sh  qa_library_seed.sh  repro_clear_date.sh  repro_filter.sh  repro_tags.sh  start_backend.sh  verify_shelves.sh
src/: api_docs.rs  auth.rs  config.rs  db.rs  frb_generated.rs  google_books.rs  import.rs  inventaire_client.rs  lib.rs  main.rs  openlibrary.rs  seed.rs  server.rs  sync.rs
src/api/: admin.rs  auth.rs  author.rs  backup.rs  batch.rs  books.rs  chat.rs  collections.rs  contact.rs  copy.rs  data.rs  device.rs  discovery.rs  e2ee.rs  export.rs  frb.rs  gamification.rs  genie.rs  health.rs  hub.rs  integrations.rs  invite_page.rs  library.rs  loan.rs  lookup.rs  mcp.rs  metadata_fill.rs  mod.rs  peer.rs  profile.rs  public_stats.rs  relay.rs  sales.rs  scan.rs  search.rs  setup.rs  tag.rs  user.rs  view_counter.rs
src/api/frb/: account_sync.rs  backup.rs  book_conversions.rs  book_dto.rs  book_notes.rs  books.rs  collections.rs  contacts.rs  core.rs  covers.rs  events.rs  games.rs  gamification.rs  hub_catalog.rs  (+15 more)
src/crypto/: account_keys.rs  device_registry.rs  encryption.rs  envelope.rs  errors.rs  identity.rs  key_exchange.rs  mod.rs  sealed_blob.rs
src/domain/: author_repository.rs  book_repository.rs  collection_repository.rs  copy_repository.rs  errors.rs  gamification_repository.rs  linked_device_repository.rs  loan_settings_repository.rs  memory_game_repository.rs  metadata_fill.rs  mod.rs  notification_repository.rs  repositories.rs
src/genie/: models.rs  service.rs
src/infrastructure/: auth.rs  book_local.rs  cover_sync_state.rs  crsqlite_crr.rs  crsqlite_dynamic.rs  crsqlite_static.rs  db.rs  mcp_token.rs  mod.rs  nonce_store.rs  referential_integrity.rs  seed.rs  server.rs  state.rs  uuid_lookup.rs
src/models/: author.rs  book.rs  book_authors.rs  book_tags.rs  collection.rs  collection_book.rs  contact.rs  copy.rs  gamification_achievements.rs  gamification_config.rs  gamification_progress.rs  gamification_streaks.rs  installation_profile.rs  library.rs  library_config.rs  linked_device.rs  loan.rs  mod.rs  notification.rs  operation_log.rs  p2p_outgoing_request.rs  p2p_request.rs  peer.rs  peer_book.rs  peer_gamification_stats.rs  relay_config.rs  sale.rs  tag.rs  user.rs
src/modules/: mod.rs
src/services/: account_enrollment.rs  account_pairing.rs  account_session_service.rs  account_signup_service.rs  account_sync_client.rs  account_sync_engine.rs  book_service.rs  catalog_events.rs  catalog_notification.rs  collection_service.rs  contact_service.rs  cover_sync.rs  crsqlite_engine.rs  crypto_service.rs  delta_service.rs  device_pairing_service.rs  device_sync_service.rs  e2ee_transport.rs  gamification_service.rs  hub_directory_service.rs  identity_service.rs  leaderboard_events.rs  loan_service.rs  lookup_service.rs  mcp_tool_service.rs  mdns.rs  metadata_fill_service.rs  mod.rs  notification_service.rs  nudge_events.rs  oplog_pruner.rs  peer_delta_sync.rs  peer_identity_sync.rs  profile_events.rs  profile_notification.rs  relay_poller.rs  relay_session.rs  relay_transport.rs  sale_service.rs  ws_nudge.rs
src/sync/: enrichment.rs  processor.rs
src/utils/: cover_image.rs  cover_url.rs  dedup_key.rs  default_library_name.rs  etag.rs  hub_url.rs  isbn.rs  lang.rs  leaderboard_relay.rs  library_helpers.rs  mod.rs  net.rs  peer_discovery.rs  uuid_gen.rs
static/: add_book.html  books.html  chat.html  chat_v2.html  contacts.html  copies.html  index.html  loans.html  p2p.html  requests.html  scan.html  settings.html  setup.html
static/css/: app.css
static/i18n/: de.json  en.json  es.json  fr.json
static/js/: api.js  i18n.js  theme.js
tests/: api_error_handling_test.rs  api_integration_test.rs  avatar_sync_request_test.rs  backup_restore_test.rs  backup_watermark_test.rs  backup_writer_test.rs  book_isbn_dedup_test.rs  books_delta_test.rs  books_etag_test.rs  borrow_metadata_test.rs  catalog_delta_request_test.rs  collection_added_at_backfill_migration.rs  collection_series_migration.rs  copy_lender_identity_migration.rs  copy_status_test.rs  cover_proxy_ssrf_test.rs  device_sync_test.rs  e2ee_transport_test.rs  gamification_test.rs  hub_auto_recovery_test.rs  hub_catalog_push_diff_test.rs  hub_cover_delete_e2e_test.rs  hub_cover_upload_e2e_test.rs  hub_cover_upload_failure_test.rs  hub_register_app_version_test.rs  jwt_auth_test.rs  leaderboard_phase1_test.rs  library_config_seed_test.rs  linked_device_test.rs  loan_http_test.rs  loan_request_send_failure_test.rs  mcp_endpoint_auth_test.rs  mfa_test.rs  notification_test.rs  operation_log_test.rs  owner_api_loopback_guard_test.rs  pairing_test.rs  peer_privacy_test.rs  peer_ssrf_extension_test.rs  relay_refresh_fallback_test.rs  (+7 more)
tests/fixtures/: bnf_sru_9782367321257.xml  sudoc_9782367321257.xml
(+66 files in other folders)
