[package]
name = "bibliogenius"
version = "0.8.7-beta.2"
edition = "2024"

license = "AGPL-3.0-or-later"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(frb_expand)'] }

[lib]
name = "rust_lib_app"
crate-type = ["cdylib", "staticlib", "lib"]

# The binary is only for desktop - requires "desktop" feature
[[bin]]
name = "bibliogenius"
path = "src/main.rs"
required-features = ["desktop"]

[features]
default = ["desktop", "mcp"]
desktop = []
mcp = []

[dependencies]
# Flutter Rust Bridge
flutter_rust_bridge = "=2.11.1"

# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "make"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }

# HTTP client (native-tls-vendored: SecureTransport on Apple, SChannel on Windows,
# vendored OpenSSL on Android/Linux - works in FFI context on all platforms)
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "native-tls-vendored",
] }
quick-xml = { version = "0.31", features = ["serialize"] }
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
# Invalid lines removed


# CSV parsing
csv = "1.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# Additional dependencies
async-trait = "0.1"
once_cell = "1.18"
futures = "0.3"
urlencoding = "2.1"
strsim = "0.11"
stop-words = "0.10"
url = "2.5"
dashmap = "5"

# Documentation
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
totp-rs = { version = "5.7.0", features = ["qr", "otpauth", "gen_secret"] }

# Local discovery (mDNS)
mdns-sd = "0.11"
hostname = "0.4"
local-ip-address = "0.6.8"

# MCP Server
# MCP Server - Manual implementation using serde_json for POC
# rmcp dependency removed to avoid compilation issues

# E2EE Crypto — see SECURITY_GUIDELINES.md
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.8"
zstd = "0.13"
rmp-serde = "1"
hex = "0.4"
base64 = "0.22"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "native-tls",
] }
