[package]
name = "bibliogenius"
version = "1.1.1-beta.2"
edition = "2024"

license = "AGPL-3.0-or-later"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(frb_expand)'] }

[lib]
name = "rust_lib_app"
crate-type = ["cdylib", "staticlib", "lib"]

# The binary is only for desktop - requires "desktop" feature
[[bin]]
name = "bibliogenius"
path = "src/main.rs"
required-features = ["desktop"]

[features]
default = ["desktop", "mcp"]
desktop = []
mcp = []
# The real cr-sqlite merge engine over the sqlx + SeaORM
# stack. Off by default so the normal build/CI needs no native cr-sqlite extension.
# This is the DYNAMIC dev/test path: it loads `crsqlite.dylib` at runtime.
crsqlite = []
# Shipping path: statically link the vendored cr-sqlite archive (build.rs) and
# register it in-process via `sqlite3_auto_extension`. iOS forbids runtime
# extension loading, so static link is the cross-platform shipping mechanism
# (ADR-044 section 2). Distinct from the dynamic `crsqlite` feature above.
crsqlite-static = ["dep:libsqlite3-sys"]
# Runtime gate for the account-sync data leg (ADR-044). Off by default, flipped
# per platform. When on, the app DB pool is built single-connection on a
# cr-sqlite-loaded connection, the replicated tables are promoted to CRRs after
# migrations, and `account_sync_now` runs a real merge cycle instead of a no-op.
# Requires a cr-sqlite loader alongside it: `crsqlite` (dynamic dev) or
# `crsqlite-static` (ship). Enforced by a compile_error in `lib.rs`.
account_sync = []

[build-dependencies]
# Verify the vendored cr-sqlite static archive's SHA-256 against CHECKSUMS.txt
# at build time (supply-chain defense, ADR-044). Only used by build.rs.
sha2 = "0.10"

[dependencies]
# Flutter Rust Bridge
flutter_rust_bridge = "=2.11.1"

# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "make"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
# Direct handle on the SAME bundled SQLite that sqlx-sqlite links (Cargo unifies
# the 0.27 instance + `bundled` feature, so there is a single SQLite in the
# process). Used only to call `sqlite3_auto_extension` when statically linking
# cr-sqlite. Compiled only under the `crsqlite-static` feature.
libsqlite3-sys = { version = "0.27", optional = true }
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    # Exposes `DatabaseConnection::get_sqlite_connection_pool()` so the
    # directory-cache insert can pin a single connection while it disables
    # foreign_keys, instead of toggling the pragma on the shared pool (which
    # could leak an FK-off connection, the foreign-key cascade-orphan bug).
    "sea-orm-internal",
] }

# HTTP client (native-tls-vendored: SecureTransport on Apple, SChannel on Windows,
# vendored OpenSSL on Android/Linux - works in FFI context on all platforms)
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "native-tls-vendored",
] }
# No "serialize" feature: only the manual Reader/events/escape APIs are used
# (SUDOC/BNF parsers), not the quick_xml::de/se serde modules.
quick-xml = "0.41"
uuid = { version = "1.4", features = ["v4", "v7", "fast-rng", "macro-diagnostics"] }
# ISBN-10 ↔ ISBN-13 conversion (same crate already used by librius)
isbn2 = "0.4.0"
# Natural-language detection (last-resort summary/title language signal, ADR-040)
whatlang = "0.18"
# Invalid lines removed


# CSV parsing
csv = "1.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# Additional dependencies
async-trait = "0.1"
once_cell = "1.18"
futures = "0.3"
urlencoding = "2.1"
strsim = "0.11"
unicode-normalization = "0.1"
stop-words = "0.10"
url = "2.5"
dashmap = "5"

# Documentation
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
totp-rs = { version = "5.7.0", features = ["qr", "otpauth", "gen_secret"] }

# Local discovery (mDNS)
mdns-sd = "0.11"
hostname = "0.4"
local-ip-address = "0.6.8"

# MCP Server
# MCP Server - Manual implementation using serde_json for POC
# rmcp dependency removed to avoid compilation issues

# WebSocket client for relay nudge notifications (ADR-017)
tokio-tungstenite = { version = "0.24", features = ["native-tls-vendored"] }

# E2EE Crypto — see SECURITY_GUIDELINES.md
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.8"
zstd = "0.13"
rmp-serde = "1"
hex = "0.4"
base64 = "0.22"
# Account signup (ST-05 Phase F): passphrase strength gate (F7) + recovery-kit mnemonic (ADR-042 §8/§14 L2)
zxcvbn = "3"
bip39 = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Local backup archive (.bgbackup). Default features pull deflate via
# flate2 + a couple of others; the compile cost is acceptable and we want
# a simple, well-tested feature set for archive interop.
zip = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
wiremock = "0.6"
serial_test = "3"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "native-tls",
] }
tempfile = "3"
